[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/sprites/char_sprite.png" type="Texture" id=1]
[ext_resource path="res://player/player.gd" type="Script" id=2]
[ext_resource path="res://player/bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://player/player_idle_state.gd" type="Script" id=4]
[ext_resource path="res://logic/state_machine.gd" type="Script" id=5]
[ext_resource path="res://player/player_move_state.gd" type="Script" id=6]
[ext_resource path="res://assets/sprites/blood_printer.png" type="Texture" id=7]
[ext_resource path="res://player/blood_printer.gd" type="Script" id=8]
[ext_resource path="res://player/print_state.gd" type="Script" id=9]
[ext_resource path="res://assets/sprites/revolver.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 3.0
height = 10.0

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 1088, 32 )

[sub_resource type="Animation" id=4]
resource_name = "print"
length = 3.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 33 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 17, -14 ), Vector2( 17, -12 ), Vector2( 17, -15 ), Vector2( 17, -14 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6, 2.8, 3.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 0 ) ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )
Bullet = ExtResource( 3 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )
default_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource( 4 )
state_name = "idle"
processing_mode = 1
Bullet = ExtResource( 3 )
animated_sprite = NodePath("../../AnimatedSprite")
host = NodePath("../..")
shoot_origin = NodePath("../../Revolver/BulletSpawn")
revolver = NodePath("../../Revolver")
revolver_left = NodePath("../../RevolvedLeft")
revolver_right = NodePath("../../RevolverRight")

[node name="MoveState" type="Node" parent="StateMachine"]
script = ExtResource( 6 )
state_name = "move"
processing_mode = 1
Bullet = ExtResource( 3 )
animated_sprite = NodePath("../../AnimatedSprite")
host = NodePath("../..")
shoot_origin = NodePath("../../Revolver/BulletSpawn")
revolver = NodePath("../../Revolver")
revolver_left = NodePath("../../RevolvedLeft")
revolver_right = NodePath("../../RevolverRight")
kinematic_body = NodePath("../..")

[node name="PrintState" type="Node" parent="StateMachine"]
script = ExtResource( 9 )
state_name = "print"
animated_sprite = NodePath("../../AnimatedSprite")
blood_printer = NodePath("../../BloodPrinter")

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -14 )
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -5 )
rotation = -1.5708
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Revolver" type="Sprite" parent="."]
position = Vector2( 10, -10 )
texture = ExtResource( 10 )
flip_h = true

[node name="BulletSpawn" type="Node2D" parent="Revolver"]
position = Vector2( 6, -1 )

[node name="RevolverRight" type="Node2D" parent="."]
position = Vector2( 9, -9 )

[node name="RevolvedLeft" type="Node2D" parent="."]
position = Vector2( -9, -9 )

[node name="BloodPrinter" type="Sprite" parent="."]
self_modulate = Color( 1, 0, 0, 0 )
position = Vector2( 17, -14 )
texture = SubResource( 3 )
hframes = 34
script = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="BloodPrinter"]
anims/print = SubResource( 4 )
